force-app/main/default/objects/POSSlippageDates__c/POSSlippageDates__c.object-meta.xml
<CustomObject>
    <description>Slippage Dashboard and any dashboard where we need to toggle dynamic views for previous and current periods.</description>
    <label>POSSlippageDate</label>
    <nameField>
        <label>POSSlippageDates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSSlippageDates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>