force-app/main/default/objects/POSSlippageDates__c/fields/ChartYear1__c.field-meta.xml
<CustomField>
    <fullName>ChartYear1__c</fullName>
    <formula>if( Offset__c = 0,&apos;0&apos;,&apos;-1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChartYear1</label>
    <type>Text</type>
</CustomField>