force-app/main/default/objects/POSSlippageDates__c/fields/ChartYear2__c.field-meta.xml
<CustomField>
    <fullName>ChartYear2__c</fullName>
    <formula>if( Offset__c = 0,&apos;-2&apos;,&apos;-3&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChartYear2</label>
    <type>Text</type>
</CustomField>