force-app/main/default/objects/POSSlippageDates__c/fields/Col1__c.field-meta.xml
<CustomField>
    <fullName>Col1__c</fullName>
    <formula>if( Offset__c = 0,&apos;1 years ago&apos;,&apos;2 years ago&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col1</label>
    <type>Text</type>
</CustomField>