force-app/main/default/objects/POSSlippageDates__c/fields/Col1_Label__c.field-meta.xml
<CustomField>
    <fullName>Col1_Label__c</fullName>
    <formula>if( Offset__c = 0,text(YEAR(today()-365))&amp;&quot; YTD&quot;,text(YEAR(today()-730)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col1 Label</label>
    <type>Text</type>
</CustomField>