force-app/main/default/objects/POSSlippageDates__c/fields/Col1YTD__c.field-meta.xml
<CustomField>
    <fullName>Col1YTD__c</fullName>
    <formula>if( Offset__c = 0,text(365+ DayOffset__c)&amp;
&apos; days ago&apos;,&apos;2 years ago&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col1YTD</label>
    <type>Text</type>
</CustomField>