force-app/main/default/objects/POSSlippageDates__c/fields/Col2__c.field-meta.xml
<CustomField>
    <fullName>Col2__c</fullName>
    <formula>if( Offset__c = 0 ,&apos;current year&apos;,
&apos;1 years ago&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col2</label>
    <type>Text</type>
</CustomField>