force-app/main/default/objects/POSSlippageDates__c/fields/Col2Label__c.field-meta.xml
<CustomField>
    <fullName>Col2Label__c</fullName>
    <formula>if( Offset__c = 0,text(YEAR(today()))&amp;&quot; YTD&quot;,text(YEAR(today()-365)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col2Label</label>
    <type>Text</type>
</CustomField>