force-app/main/default/objects/POSSlippageDates__c/fields/Col3__c.field-meta.xml
<CustomField>
    <fullName>Col3__c</fullName>
    <formula>if( Offset__c = 0,&apos;[&quot;6 quarter ago&quot;..&quot;6 quarter ago&quot;]&apos;,&apos;[&quot;7 quarter ago&quot;..&quot;7 quarter ago&quot;]&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col3</label>
    <type>Text</type>
</CustomField>