force-app/main/default/objects/POSSlippageDates__c/fields/col4QTD__c.field-meta.xml
<CustomField>
    <fullName>col4QTD__c</fullName>
    <formula>if( Offset__c = 0,text(365+ DayOffset__c)&amp;
&apos; days ago&apos;,&apos;5 quarters ago&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>col4QTD</label>
    <type>Text</type>
</CustomField>