force-app/main/default/objects/POSSlippageDates__c/fields/Col5Label__c.field-meta.xml
<CustomField>
    <fullName>Col5Label__c</fullName>
    <formula>if( Offset__c = 0,text(year(today()))&amp;&quot; Q&quot;&amp;text(CEILING( MONTH ( today() ) / 3 )),text(year(today()-90))&amp;&quot; Q&quot;&amp;text(CEILING( MONTH ( today()-90 ) / 3 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Col5Label</label>
    <type>Text</type>
</CustomField>