force-app/main/default/objects/POSSlippageDates__c/fields/CurrentQuarter__c.field-meta.xml
<CustomField>
    <fullName>CurrentQuarter__c</fullName>
    <formula>CEILING( MONTH ( today() ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentQuarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>