force-app/main/default/objects/POSSlippageDates__c/fields/DayinQ__c.field-meta.xml
<CustomField>
    <fullName>DayinQ__c</fullName>
    <formula>TODAY() -
IF(MONTH(TODAY()) &lt;= 3, 
DATE(YEAR(TODAY()), 01 , 01 ), 
IF(MONTH(TODAY()) &lt;= 6, 
DATE(YEAR(TODAY()), 04 , 01 ), 
IF(MONTH(TODAY()) &lt;= 9, 
DATE(YEAR(TODAY()), 07 , 01 ), 
DATE(YEAR(TODAY()), 10 , 01 ))))</formula>
    <label>DayinQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>