force-app/main/default/objects/POSSlippageDates__c/fields/DayOffset__c.field-meta.xml
<CustomField>
    <fullName>DayOffset__c</fullName>
    <formula>CASE( MOD( today() - DATE(1900, 1, 7), 7), 0, 9, 1, 10, 2, 11, 3,
5, 4, 6, 5, 7, 6, 8,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DayOffset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>