force-app/main/default/objects/POSSlippageDates__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <description>Number of periods offset</description>
    <label>Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>