force-app/main/default/objects/POSSlippageDates__c/fields/QuarterFilter__c.field-meta.xml
<CustomField>
    <fullName>QuarterFilter__c</fullName>
    <formula>if( Offset__c = 0,&quot;Q&quot;&amp;text(CEILING( MONTH ( today() ) / 3 )),&quot;Q&quot;&amp;text(CEILING( MONTH ( today()-90 ) / 3 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuarterFilter</label>
    <type>Text</type>
</CustomField>