force-app/main/default/objects/POSSlippageDates__c/fields/SlippageChart3Label__c.field-meta.xml
<CustomField>
    <fullName>SlippageChart3Label__c</fullName>
    <formula>if( Offset__c = 0,&apos;Current Year &apos;,&apos;Previous Year &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SlippageChart3Label</label>
    <type>Text</type>
</CustomField>